# shopping-assistant

./: .gitignore  AGENTS.md  README.md  components.json  drizzle.config.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  rapport de Mesures Corporelles.html  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: architecture.md  data-model.md  imports.md  ontology.md  recommendation-strategy.md
drizzle/: 0000_fixed_adam_destine.sql  0000_initial.sql  0001_flaky_scrambler.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  navigation.ts
src/components/: MetricCard.tsx  PageHeader.tsx
src/components/layout/: AppShell.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  textarea.tsx
src/db/mappers/: stateMapper.ts
src/db/repositories/: appStateRepository.ts
src/db/schema/: diagnostics.ts  guides.ts  index.ts  ontology.ts  rules.ts
src/domain/body-profile/: schema.ts
src/domain/garments/: taxonomy.ts
src/domain/ontology/: cuts.json  ease.json  garments.json  index.ts  materials.json  measurement-mapping.json
src/hooks/: useStudioStore.ts
src/lib/: utils.ts
src/styles/: globals.css
tests/e2e/: critical-flow.spec.ts
tests/integration/: brandGuideImporter.test.ts  recommendationWorkflow.test.ts
tests/unit/: htmlBodyProfileImporter.test.ts  ontology.test.ts  recommendationEngine.test.ts  unitNormalization.test.ts
(+42 files in other folders)
